# Axial

./: .gitignore  DEPLOY.md  PRINCIPLES.md  README.md  TODO.md  axial.css  bar.js  braid.html  braid.js  graph.html.j2  graph.py  heatmap.js  index.js  package-lock.json  package.json  reorder.js  requirements.txt  rollup.config.js  setup.cfg  setup.py  volcano.html  volcano.js
axial/: axial.py  heatmap.html
axial/data/: human_gene_sets.js
axial/go/: human_gene_sets.js
axial/templates/: bar.html  bar.html.j2  base.html.j2  braid.html.j2  graph.html  graph.html.j2  heatmap.html  heatmap.html.j2  volcano.html  volcano.html.j2
css/: axial.css
data/: human_counts.js  human_differential.js  mouse_human_lee_merged_classes.js
distjs/: axial.js  axial.min.js
docs/: README.md  index.html  javascript.md  motivation.md
docs/doctrees/: environment.pickle  index.doctree
docs/example/: bar.html  braid.html  graph.html  heatmap.html  volcano.html
docs/example/data/: human_classes.csv  human_counts.csv  human_differential.csv  ipsc_differential.csv  nxgraph.pickle
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/html/_modules/: axial.html  index.html
docs/html/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
drafts/: canvas_heatmap.html
example/: bar.html  braid.html  heatmap.html  volcano.html
example/data/: human_classes.js
js/: DEPLOY.md  GOrilla.js  bar.js  braid.js  cola.min.js  graph.js  heatmap.js  util.js  volcano.js
test/: Test_Templates_Compile.ipynb
(+9 files in other folders)
