[metadata]
name = axial
version = 0.1.0
author = zfrenchee
author-email = alex@lenail.org
summary = Interactive Visualizations for High Dimensional Genomics Data
description-file = README.md
home-page = http://alexlenail.me/Axial/
license = MIT
classifier =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7


[files]
packages =
    axial
data_files =
    templates/ = axial/templates/*
    go/ = axial/go/*

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain


[bdist_wheel]
universal = 1


